# CMOS-Spectroscopy

./: CMakeLists.txt  ImageToNP (1).py  ImageToNP.py  ImageToNPC.cu  README.md
GPU/: CMakeLists.txt  ImageProcessGPU.cu
Python/: BokehGUI.py  CMOSProcess.py  FindThresholdImageQuick.py  ImageProcessPython.py  ReceivePackets.py  Take100Pictures.py  launchGUI
