cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -std=c++0x")
project(IMAGE_TO_NPC LANGUAGES CUDA CXX)
if (NOT DEFINED CMAKE_CUDA_STANDARD)
	set(CMAKE_CUDA_STANDARD 11)
	set(CMAKE_CUDA_STANDARD_REQUIRED ON)
endif()
include_directories(/usr/include/spinnaker)
link_directories(/usr/lib)
add_compile_options(-std=c++11 -fPIC -pthread)
find_package(CUDA)
cuda_add_executable(acq ImageToNPC.cu)
target_link_libraries(acq Spinnaker)

